tests/transpiler/x/cs/cast_struct.cs
// Generated by Mochi 0.10.33 on 2025-07-21 18:06 +0700
using System;
using System.Collections.Generic;

struct Todo {
    public string title;
    public override string ToString() => $"{{\"title\": \"{title}\"}}";
}
struct Todo {
    public string title;
    public override string ToString() => $"{{\"title\": \"{title}\"}}";
}
class Program {
    static Todo todo = new Todo{title = "hi"};
    static void Main() {
        Console.WriteLine(todo.title);
    }
}
